--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
   - "3.5"
+os:
+  - osx
+  - linux
 # command to install dependencies
 install:
   - pip install -r requirements.txt
