--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: MJ_yang_
+title: JTY
 email: jiangtianyu2009@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.jiangtianyu.xyz/" # the base hostname & protocol for your site
+url: "https://30141592.xyz/" # the base hostname & protocol for your site
 github_username: jiangtianyu2009
 
 # Build settings
