--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - python checkfiles.py
+#  - python checkfiles.py
+  - curl https://www.javlibrary.com/tw/star_list.php?prefix=A
