--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
 # command to run tests
 script:
 #  - python checkfiles.py
-  - curl https://www.javlibrary.com/tw/star_list.php?prefix=A
+  - curl https://nhentai.net/search?q=二峰跨人
